--- a/package.json
+++ b/package.json
@@ -4,13 +4,29 @@
   "description": "a simple product api",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir build",
     "dev": "nodemon src/index.js --exec babel-node",
-    "start": "node build/index.js"
+    "build": "babel src --out-dir build",
+    "start": "node build/index.js",
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Eliseo005D/Salazar_Rodriguez.git"
   },
   "keywords": [],
   "author": "Eliseo Salazar",
   "license": "ISC",
+
+  "homepage": "https://github.com/Eliseo005D/Salazar_Rodriguez#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.15",
+    "supertest": "^4.0.2" 
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -20,12 +36,5 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.5",
-    "@babel/node": "^7.16.8",
-    "@babel/preset-env": "^7.16.11",
-    "nodemon": "^2.0.15"
   }
 }
